Resolved layout issues with breakpoints

--- a/src/style.css
+++ b/src/style.css
@@ -99,7 +99,7 @@ input {
 #location-result {
     font-size: 52px;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 #results {
@@ -161,7 +161,7 @@ img {
 }
 
 #back {
-    font-size: 52px;
+    font-size: 48px;
 }
 
 @media only screen and (max-width: 1575px){
@@ -315,6 +315,7 @@ img {
 @media only screen and (max-width: 890px){
     #result-body {
         gap: 45px;
+        margin-top: 100px;
     }
     
     #location-result {
@@ -369,10 +370,27 @@ img {
     }
     
     #location-result {
-        font-size: 38px;
+        font-size: 36px;
         margin-top: -30px;
     }
-    
+    .card {
+        flex-basis: 135px;
+        flex-grow: 0;
+        flex-shrink: 0;
+        height: 80px;
+        padding: 40px 5px 60px 5px;
+        gap: 45px;
+        padding-top: 80px;
+    }
+    .card,
+    h3 {
+        font-size: 16px;
+    }
+    #results {
+        gap: 15px;
+        width: 100%;
+        row-gap: 65px;
+    }
 }
 
 @media only screen and (max-width: 635px){
@@ -414,12 +432,12 @@ img {
     }
     
     .temperature {
-        gap: 20px;
+        gap: 18px;
     }
     
     .temp,
     .feelslike{
-        font-size: 20px;
+        font-size: 17px;
     }
     .temp {
         margin-left: -10px;
@@ -428,7 +446,8 @@ img {
 @media only screen and (max-width: 575px){
     #result-body {
         gap: 30px;
-        padding-top: 20px;
+        margin-top: 30px;
+        overflow: scroll;
     }
     
     #location-result {
